tests/__snapshots__/api-toBeNumber.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeNumber: stderr 1`] = `
"Error: Type 'number' is not identical to type 'void'.

   7 |   expect(returnsNumber()).type.toBeNumber();
   8 | 
>  9 |   expect(returnsVoid()).type.toBeNumber();
     |                              ^
  10 | });
  11 | 
  12 | test("is NOT number?", () => {

       at ./__typetests__/toBeNumber.tst.ts:9:30 ❭ is number?

Error: Type 'number' is identical to type 'number'.

  13 |   expect(returnsVoid()).type.not.toBeNumber();
  14 | 
> 15 |   expect(returnsNumber()).type.not.toBeNumber();
     |                                    ^
  16 | });
  17 | 

       at ./__typetests__/toBeNumber.tst.ts:15:36 ❭ is NOT number?

"
`;

exports[`toBeNumber: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeNumber.tst.ts
  × is number?
  × is NOT number?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
